# ChangeLog for app-office/mozilla-sunbird-bin
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/mozilla-sunbird-bin/ChangeLog,v 1.6 2005/03/23 20:03:48 seemant Exp $

  23 Mar 2005; Seemant Kulleen <seemant@gentoo.org>
  mozilla-sunbird-bin-0.2.20040812.ebuild,
  mozilla-sunbird-bin-0.2.20041112.ebuild:
  mozilla-launcher to www-client from net-www

  14 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org>
  mozilla-sunbird-bin-0.2.20040812.ebuild,
  mozilla-sunbird-bin-0.2.20041112.ebuild:
  back to amd64 from of emul-linux-x86

  12 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org>
  mozilla-sunbird-bin-0.2.20040812.ebuild,
  mozilla-sunbird-bin-0.2.20041112.ebuild:
  migrated from amd64? to emul-linux-x86? dependency.

*mozilla-sunbird-bin-0.2.20041112 (18 Nov 2004)

  18 Nov 2004; Aron Griffis <agriffis@gentoo.org>
  +mozilla-sunbird-bin-0.2.20041112.ebuild:
  Update to 0.2 beta #69100

*mozilla-sunbird-bin-0.2.20040812 (19 Aug 2004)

  19 Aug 2004; Aron Griffis <agriffis@gentoo.org> +metadata.xml,
  +mozilla-sunbird-bin-0.2.20040812.ebuild:
  First ebuild for mozilla-sunbird calendar #54988. Note this is pmasked for now
  since it's still got some bugs to work out (in the program, not the ebuild)
